--- a/public/index.html
+++ b/public/index.html
@@ -2,19 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Easily set up and keep on top of your spaced repetition sessions."
     />
-    <link rel="apple-touch-icon" href="logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -24,9 +17,13 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Learn Space Repeat</title>
+
+    <link rel='stylesheet' href='%PUBLIC_URL%/bootstrap.min.css' />
+    <link rel='stylesheet' href='%PUBLIC_URL%/theme.min.css' />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.min.css" />
   </head>
-  <body>
+  <body class="d-flex flex-column">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
@@ -39,5 +36,12 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+
+    <footer class="page-footer">
+      <div class="footer-copyright text-center py-3">© 2019 Copyright:
+        <a class="mr-1" href="https://orimarash.com"> Ori Marash</a>
+        <a href="https://github.com/penguoir/learnspacerepeat"><i class="fab fa-github"></i></a>
+      </div>
+    </footer>
   </body>
 </html>
